--- a/sytle.css
+++ b/sytle.css
@@ -6,3 +6,49 @@ body {
 h1 {
     text-align: center;
 }
+
+
+.container {
+    background-color: white;
+    width: 500px;
+    padding: 30px;
+    border: 2px solid #e0e0e0;
+    border-radius: 15px;
+
+}
+.form {
+    margin: 10px;
+    padding: 5px;
+    border: 1px solid #ffecec;
+
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+label {
+    font-weight: bold;
+    display: block;
+}
+
+.btn-calc {
+    color: white;
+    background-color: #e84142;
+    border: none;
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.result-card {
+    margin-top: 20px;
+    text-align: center;
+}
