--- a/sytle.css
+++ b/sytle.css
@@ -14,7 +14,7 @@ h1 {
     padding: 30px;
     border: 2px solid #e0e0e0;
     border-radius: 15px;
-
+    justify-self: center;
 }
 .form {
     margin: 10px;
