--- a/sytle.css
+++ b/sytle.css
@@ -19,8 +19,12 @@ h1 {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
+.container h2 {
+    margin-top: 0%;
+}
+
 .form {
-    margin: 15px;
+    margin-bottom: 15px;
     padding: 10px;
     background-color: #fff9f9;
     border: 1px solid #ffecec;
